# de_fapi_analytics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  proj_obj.md  pyproject.toml
boot/: docker-run.sh
nbs/: 1-router_check.ipynb  2-data-types.ipynb  3-send-data-to-the-api.ipynb  4-tdb-queries.ipynb  hello-world.ipynb
src/: main.py
src/api/db/: config.py  session.py
src/api/events/: db_models_schemas.py  modelsDTO.py  routing.py
